Правки по ревью 1
Проверка на отрицательную стоимость.
Проверка на ввод текста вместо цифр.